<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboardingRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_red_gradient"
    tools:context=".OnboardingActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <!-- Image (top of the chain) -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_dumbbell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvWelcome"
        app:layout_constraintVertical_chainStyle="packed"
        app:tint="@android:color/white" />

    <!-- Welcome Text (middle of the chain) -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_to_fastfit"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintBottom_toTopOf="@id/tvInstructions" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/onboarding_instructions"
        android:textColor="#F2FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:layout_constraintBottom_toTopOf="@+id/btnGetStarted" />

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/get_started"
        android:textAllCaps="true"
        android:textColor="@color/fastfit_red"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="@id/gBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

</androidx.constraintlayout.widget.ConstraintLayout>